force-app/objects/Email_to_sObject_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>DOMAIN_CHECK__c</fullName>
        <label>DOMAIN_CHECK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Entitlement_Process_Id__c</fullName>
        <label>Default Entitlement Process Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Case_Sensitive_Keywords_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Case Sensitive Keywords Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Keyword_Match_Against__c</fullName>
        <defaultValue>&apos;Email Subject And Body&apos;</defaultValue>
        <label>Do Keyword Match Against</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Subject</fullName>
                    <default>true</default>
                    <label>Email Subject</label>
                </value>
                <value>
                    <fullName>Email Body</fullName>
                </value>
                <value>
                    <fullName>Email Subject And Body</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Priority__c</fullName>
        <label>General Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Queue_Name__c</fullName>
        <label>General Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Recordtype_Devname__c</fullName>
        <label>General Recordtype Devname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Support_Email__c</fullName>
        <label>Generic Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Email_Domain__c</fullName>
        <label>Internal Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MISCELLANEOUS__c</fullName>
        <label>MISCELLANEOUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email to sObject Configuration</label>
    <pluralLabel>Email to sObject Configurations</pluralLabel>
</CustomObject>